Update CSS to fix distortion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 /*---Header---*/
@@ -32,7 +33,7 @@ body {
   background-size: cover;
   height: 10vh;
   color: #fafafa;
-  padding: 25px 0 0 0;
+  padding: 10px 0;
   z-index: 1000;
 }
 
@@ -43,26 +44,26 @@ a {
 /*---Profile photo---*/
 .profile-photo img {
   border-radius: 50%;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border: solid 3px #fafafa;
 }
 
 /*---H1-H2 container---*/
 .h1-h2-container {
   text-align: center;
-  padding: 0.5% 0 0 15%;
+  padding: 0.4% 0 0 15%;
 }
 
 /*---Headings---*/
 h1 {
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   font-weight: 900;
   margin: 0;
 }
 
 h2 {
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   font-weight: 600;
   margin: 0;
 }
@@ -78,7 +79,7 @@ h2 {
 /*---Navbar---*/
 #nav-container i {
   color: #fafafa;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
 }
 
@@ -100,7 +101,7 @@ h2 {
 }
 
 .download-container i {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
   color: #fafafa;
   transition: ease-in-out 0.3s;
@@ -115,8 +116,8 @@ h2 {
   color: #e0e1dd;
   border: solid 3px #fafafa;
   transition: ease-in-out 0.3s;
-  width: 270px;
-  font-size: 1.2rem;
+  width: 210px;
+  font-size: 1rem;
   font-weight: 500;
 }
 
@@ -127,12 +128,12 @@ h2 {
 
 /*---Main Body---*/
 section {
-  height: 74vh;
+  height: 73vh;
 }
 
 /*---Button Container---*/
 .button-case {
-  margin: 10% 0;
+  margin: 5% 0;
 }
 
 .button-container {
@@ -146,7 +147,7 @@ section {
 /*---Content body---*/
 .content-body {
   width: 90%;
-  height: 90%;
+  height: 100%;
   padding: 2%;
   border-radius: 10px;
   backdrop-filter: blur(5px);
@@ -157,7 +158,7 @@ section {
 }
 
 #form-body {
-  height: 64.5vh;
+  height: 70vh;
 }
 
 .form-container {
@@ -165,18 +166,16 @@ section {
   justify-content: center;
   align-items: center;
   padding: 0 0 0 10%;
-  margin: 5% 0 ;
-  width: 90%;
-  height: auto;
+  margin: 2% 0 ;
+  width: 90%
 }
 
 form {
-font-size: x-large;
+font-size: large;
 font-weight: 600;
 }
 
 form input {
-  width: 100%;
   padding: 10px;
   margin: 10px 0;
   border: solid 5px #0d1b2a;
@@ -197,7 +196,6 @@ form input {
   background-position: left;
   height: 8vh;
   color: #fafafa;
-  padding: 10px 0;
 }
 
 .footer-container ul {
@@ -209,12 +207,10 @@ form input {
 }
 
 
-
-
 /*---Social Media Icons---*/
 
 .footer-container i {
-  font-size: 2.2rem;
+  font-size: 2rem;
   margin: 0 10px;
   color: #fafafa;
   transition: ease-in-out 0.3s;
